# attribute-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  xmake.lua
.github/workflows/: qodana_code_quality.yml
include/attr/: attr.cppm  attr.hpp  property.hpp
src/: CMakeLists.txt  version.hpp.in
test/: CMakeLists.txt  attr_test.cpp  property_test.cpp  xmake.lua
